traces/bug_262.txt
src/femlib/GQuadTree.cpp:237: error: DEAD_STORE
  The value written to &h (type long) is never used.
Showing all 1 steps of the trace


src/femlib/GQuadTree.cpp:237:5: Write of unused value
235.       pi[0]= root->n>0 ?(int)  root->n : N ;
236.       pp[0]= p0;
237.       h=hb;
           ^
238.       do {    
239.         b= pb[l];
